@@ -195,6 +195,11 @@ sub dist_ini_ok {
   for my $test (@tests) {
     $ini->assert_has_line($test);
   }
+  if ( not $ini->has_line(qr/dzil bakeini/) ) {
+    if ( ( not $ini->has_line(qr/bumpversions\s*=\s*1/) ) and ( not $ini->has_line(qr/git_versions/) ) ) {
+      _is_bad { $self->log( $ini->stringify . ' is unbaked and has Neither bumpversions=1 or git_versions' ) };
+    }
+  }
   return $ok;
 }
 
@@ -215,6 +220,12 @@ sub dist_ini_meta_ok {
   my $ok = 1;
   for my $test (@tests) {
     undef $ok unless $dmeta->assert_has_line($test);
+  }
+  for my $test ( qr/author.*=.*kentfredric/, qr/git_versions/ ) {
+    undef $ok unless $dmeta->assert_not_has_line($test);
+  }
+  if ( ( not $dmeta->has_line(qr/bumpversions\s*=\s*1/) ) and ( not $dmeta->has_line(qr/git_versions/) ) ) {
+    _is_bad { $self->log( $dmeta->stringify . ' has Neither bumpversions=1 or git_versions' ) };
   }
 
   return $ok;
